fixed broken stylesheet. tests are all passing again

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,8 +27,8 @@
   /*width: 200px;*/
   /*height: 130px;*/
   width: 100%;
-  height: 140px;
-  max-width: 220px;
+  max-height: 75px;
+  max-width: 150px;
 }
 .tiny_flag {
   width: 60px;
@@ -64,7 +64,6 @@ h1.country_name_title {
 .welcome_well {
   margin-left: 5%;
   margin-right: 5%;
-  height: ;
 }
 .welcome_row {
   background-image: url("http://bipsearch.com/wp-content/uploads/2017/08/Expat-assignments-adn-training.jpg");
